--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <header class="bg-gray-800 text-white py-4">
         <div class="container mx-auto flex justify-between items-center">
-          <h1 class="text-2xl font-semibold">Food Ordering</h1>
+          <h1 class="text-2xl font-semibold">SpiceHub</h1>
           <nav class="flex space-x-4">
             <!-- Login/Signup button -->
             <a href="login.html" class="hover:bg-gray-600 px-3 py-2 rounded">Login/Signup</a>
